bynkc/tests/fixtures/positive/185_adapter_given_workers/expected/tokens.binding.ts
import type { Jwt } from "./tokens.js";
import type { Log } from "./logging.js";

export class StubJwt implements Jwt {
  private deps: { Log: Log };
  constructor(deps: { Log: Log }) {
    this.deps = deps;
  }
  async sign(sub: string): Promise<string> {
    await this.deps.Log.info(`signing for ${sub}`);
    return `token:${sub}`;
  }
}
