bynkc/tests/fixtures/negative/148_adapter_consumes_cycle/src/beta.binding.ts
import type { B } from "./beta.js";
export class BImpl implements B {
  async b(): Promise<number> { return 0; }
}
